# RAG-pipeline-aws-ECS-deployment-

./: .gitignore  README.md  full_workflow.py  learn_db.py  pyproject.toml  sample.db
.github/workflows/: dockerhub_build_push.yml
Ingestion_plus_Retriever_eval/: __main__.py  ingestion.env.example  logger.py
Ingestion_plus_Retriever_eval/Protocols/: document_repository_protocol.py  vector_db_protocol.py
Ingestion_plus_Retriever_eval/Repositories/: file_repository.py  pinecone_repository.py
Ingestion_plus_Retriever_eval/configs/: recursive_text_splitter_config.py
Ingestion_plus_Retriever_eval/src/: chunker_service.py  pipeline.py  recursive_character_text_splitting.py
Ingestion_plus_Retriever_eval/strategy/: splitter_strategy.py
UI/: .env.example  README.md  app.py
load_testing/: locustfile.py
notebooks/: eval_with_query.csv  hard_evals.ipynb
rag_pipeline/: README.md
rag_pipeline/api/: dependencies.py  main.py
rag_pipeline/api/routes/: ask_endpoint.py
rag_pipeline/docs/: ARCHITECTURE_ASCII.txt  api_docs.md  data_documentation.md  deployment_guide.md  evaluation_report.md  model_card.md  modeling_report.md  problem_statement.md  system_design.md
rag_pipeline/ragas_eval/: finetuned_llm.ipynb  ragas_gpt_4o_mini.ipynb  ragas_gpt_5_mini.ipynb
rag_pipeline/reference/: ARCHITECTURE.md  QUICK_REFERENCE.md
rag_pipeline/workflow/: config.py  graph.py  node_orchestrator.py  service.py  state.py
rag_pipeline/workflow/configs/: database_config.py  db_config.py  llm_config.py  node_orchestrator_config.py  pinecone_config.py  vector_db_config.py
(+17 files in other folders)
