[project]
name = "rag20march-with-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
    "pandas>=3.0.1",
    "pinecone>=8.1.0",
    "pypdf>=6.9.1",
    "ranx>=0.3.21",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
