[project]
name = "rag20march-with-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "altair>=6.0.0",
    "fastapi>=0.135.2",
    "guardrails-ai>=0.9.3",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
    "litellm>=1.82.6",
    "locust>=2.43.3",
    "nbconvert>=7.17.0",
    "pandas>=2.0.0",
    "pinecone>=8.1.0",
    "pypdf>=6.9.1",
    "ragas>=0.4.3",
    "ranx>=0.3.21",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.40.0",
    "uvicorn>=0.42.0",
]
